@@ -1,0 +1,5 @@
+build.log
+e_math_test
+e_math_test.srec
+math_test
+test.log
